add standard sourceline

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: cpp
 dist: xenial
-before_install:
-  - sudo apt-get update
 addons:
   apt:
+    sources:
+      - sourceline: 'deb http://us.archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse'
     packages:
       - build-essential 
       - g++-8 
