--- a/.travis.yml
+++ b/.travis.yml
@@ -3,27 +3,7 @@ dist: xenial
 before_install:
   - echo 'deb http://us.archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
-  - sudo apt-get -y install build-essential g++-8 gcc-8 cmake
-addons:
-  apt:
-    packages:
-      - time 
-      - xz-utils 
-      - ca-certificates 
-      - git 
-      - doxygen 
-      - graphviz 
-      - liblmdb-dev 
-      - libssl-dev 
-      - libsodium-dev 
-      - libsecp256k1-dev 
-      - libboost-all-dev 
-      - libzmq3-dev 
-      - libprotobuf-dev 
-      - protobuf-compiler 
-      - python3-dev 
-      - python3-protobuf 
-      - time 
+  - sudo apt-get -y install build-essential g++-8 gcc-8 cmake time xz-utils ca-certificates git doxygen graphviz liblmdb-dev libssl-dev libsodium-dev libsecp256k1-dev libboost-all-dev libzmq3-dev libprotobuf-dev protobuf-compiler python3-dev python3-protobuf time 
 sudo: true
 install:
   # build-essential installs gcc-7 and g++-7. Select gcc-8 as
