--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,12 @@
 language: cpp
 dist: xenial
+services:
+  - docker
 before_install:
-  - echo 'deb http://us.archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
-  - sudo apt-get update -qq
-  - sudo apt-get -y install build-essential g++-8 gcc-8 cmake time xz-utils ca-certificates git doxygen graphviz liblmdb-dev libssl-dev libsodium-dev libsecp256k1-dev libboost-all-dev libzmq3-dev libprotobuf-dev protobuf-compiler python3-dev python3-protobuf time 
+  - ./scripts/build/tool-build.sh date
 sudo: true
-install:
-  # build-essential installs gcc-7 and g++-7. Select gcc-8 as
-  # `/usr/bin/gcc` and g++-8 as `/usr/bin/g++`
-  #
-  # Via https://askubuntu.com/questions/1028601/install-gcc-8-only-on-ubuntu-18-04
-  - update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 700 --slave /usr/bin/g++ g++ /usr/bin/g++-7
-  - update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 800 --slave /usr/bin/g++ g++ /usr/bin/g++-8
 script: 
   - git submodule update --init --recursive
-  - cd build && cmake ..
-  - cd build && make test
+  - ./scripts/build/using_docker.sh
 notifications:
   email: false
