--- a/shippable.yml
+++ b/shippable.yml
@@ -16,6 +16,7 @@ build:
         INST=""
       fi
     - mkdir -p $DIR
+    - find . -print # diagnostic
     - ./scripts/build/dtools.sh "$INST cd /src/$DIR && cmake ${CMAKE_FLAGS} .. && make test"
     - ./scripts/build/dtools.sh "$INST cd /src/$DIR && checkinstall -D --fstrans=yes --install=no --pkgname ${TARGET} --nodoc -y make install"
 
