--- a/shippable.yml
+++ b/shippable.yml
@@ -5,10 +5,13 @@ env:
   - TARGET=opentxs       CMAKE_FLAGS=""                   DIR=build                    DEB=deps/opentxs-proto/build/opentxs-proto*.deb
 
 build:
+  pre_ci_boot:
+    options: "-v /tmp/src:/tmp/src"
   pre_ci:
     # cause the docker-tools container to be built
-    - ./scripts/build/dtools.sh uptime   
+    - ./scripts/build/dtools.sh uptime
   ci:
+    - cd /tmp/src
     - |-
       if ls $DEB >/dev/null 2>&1; then
         INST="dpkg --install `ls $DEB | head -1` && "
