--- a/shippable.yml
+++ b/shippable.yml
@@ -11,7 +11,7 @@ build:
     # cause the docker-tools container to be built
     - ./scripts/build/dtools.sh uptime
   ci:
-    - [ -d /tmp/shared/scripts ] || cp -r . /tmp/shared
+    - if [ -d /tmp/shared/scripts ]; then cp -r . /tmp/shared ; fi
     - cd /tmp/src
     - |-
       if ls $DEB >/dev/null 2>&1; then
